# Company

./: .env.example  .gitignore  README.md  README_TECHNICAL.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt  start_dev.bat  start_dev.sh
ai_engine/: Dockerfile  helios_core_client.py  main.py  requirements.txt
ai_engine/agents/: __init__.py  base_agent.py  classroom_agent.py  email_agent.py  instagram_agent.py  master_orchestrator.py  office_agent.py  pc_controller.py  pentest_agent.py  security_shield.py  (+3 more)
config/: allowed_domains.json  cgroups.conf  workspace.json
core/: Cargo.toml  Dockerfile  build.rs
core/proto/: helios.proto
core/src/: main.rs
dashboard_ui/: .env.local  Dockerfile  package.json  tailwind.config.ts
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COMPLIANCE_MATRIX.md  EXECUTIVE_SUMMARY.md  SECURITY_POLICIES.md  USER_GUIDE.md
scripts/: backup_audit_db.bat  generate_certs.py  generate_proto.bat  generate_proto.sh  master_setup.bat  master_setup.sh  setup_env_encryption.py  start_daemon.bat  stop_daemon.bat
snapshots/: snapshot_1780770166_3c78b3.json  snapshot_1780770215_3c78b3.json  snapshot_1780770220_3c78b3.json  snapshot_1780770812_3c78b3.json  snapshot_1780770830_3c78b3.json  snapshot_1780770831_3c78b3.json  snapshot_1780771689_3c78b3.json  snapshot_1780771697_3c78b3.json
tests/: test_certification_matrix.py  test_master_orchestrator.py  test_memory_manager.py  test_path_validator.py  test_pc_controller.py  test_pentest_agent.py  test_security_shield.py  test_visual_agent.py
(+35 files in other folders)
