[package]
name = "helios_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
sysinfo = "0.29"
chrono = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.10"
